--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -21,9 +21,8 @@ jobs:
           node-version: "16"
       - name: Installing dependencies
         run: npm install
-        working-directory: demoapp
-      - name: Building project
-        run: npm run build
+             npm run build
+        working-directory: ./demoapp 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
