--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Installing dependencies
         run: npm install
              npm run build
+             ls demoapp
         working-directory: ./demoapp 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
