--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -22,8 +22,9 @@ jobs:
       - name: Installing dependencies
         run: npm install
              npm run build
-             
         working-directory: ./demoapp 
+      - name: ls
+        run: ls demoapp
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
