--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -32,4 +32,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.SECRET }}
           aws-region: us-west-1
       - name: Copy files to the production website with the AWS CLI
-        run: aws s3 sync public s3://demoprojectreact/ --delete
+        run: aws s3 sync .public s3://demoprojectreact/ --delete
