--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -24,7 +24,9 @@ jobs:
              npm run build
         working-directory: ./demoapp 
       - name: ls
-        run: ls -R demoapp
+        run: ls -a demoapp
+      - name: pwd
+        run: pwd
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
